codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_mode_task_running_exit_link.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5178
expression: terminal.backend()
---
"                                                                                                    "
"› q                                                                                                 "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  tab to queue message                                                     100% context left    exit"
